# polaris.ai

./: .env.example  .gitignore  CLAUDE.md  DEMO.md  Makefile  README.md  docker-compose.yml  skills-lock.json
backend/: .dockerignore  Dockerfile  conftest.py  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/_v1_reference/: README.md
backend/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/agent_context/: views.py
backend/ai/: admin.py  apps.py  consumers.py  functions.py  models.py  outreach_service.py  routing.py  serializers.py  urls.py  views.py
backend/buyers/: models.py
backend/catalog/: admin.py  apps.py  models.py  serializers.py  services.py  storage.py  urls.py  views.py
backend/chat/: admin.py  apps.py  consumers.py  functions.py  models.py  presence.py  responder_service.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/config/: asgi.py  lifespan.py  routing.py  urls.py  views.py  wsgi.py
backend/conversations/: consumers.py  copilot.py  functions.py  responder_service.py  routing.py  thread_consumer.py
backend/deals/: admin.py  models.py  service.py  urls.py  views.py
backend/evals/: __init__.py  judges.py  registry.py  runners.py  scorers.py  seeding.py
backend/matching/: __init__.py  apps.py  engine.py  models.py
backend/notifications/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/orchestration/: apps.py  client.py  functions.py
backend/outreach/: apps.py  functions.py  models.py  service.py  urls.py  views.py
(+166 files in other folders)
