[project]
name = "polaris-backend"
version = "0.1.0"
description = "Polaris AI backend — DRF + Channels + polaris_agent (LangGraph) + Inngest, one ASGI deployable."
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
# E501: black owns line length.
# DJ001: our models mirror a DDL with nullable TEXT/CHAR columns 1:1 (data_model_decisions),
#        so null=True on string fields is intentional schema fidelity, not an oversight.
ignore = ["E501", "DJ001"]

[tool.ruff.lint.per-file-ignores]
"**/settings/*" = ["F403", "F405"]  # star-imports in settings are intentional

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
testpaths = ["tests"]
